# lensepy-app

./: .buildinfo  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: github_pages.yml  python-pypi.yml
_bat/: Start_CMOS_GUI.bat  Start_Colorimetry_GUI.bat  Start_VI_GUI.bat
_old/BioPhot/: Guide Utilisateur Interface.pptx
_old/BioPhot/IHM_Basler/: BUGS_.txt  MainWindow.py  parameters.txt
_old/BioPhot/piezo/: piezo_diviseur.py
_old/Laser_Position/: MainWindow.py  camera_test.py  main_console.py
_old/Laser_Position/drivers/: LaserPID.py  nucleo_board_main_program_mbed2.cpp
_old/Laser_Position/widgets/: ActuatorWidget.py  CentralPositionWidget.py  EmptyWidget.py  MainMenu.py  NucleoSerialConnectionWidget.py  OpenLoopWidget.py  PIDWidget.py  ScannerWidget.py  TargetSliderWidget.py
_old/Laser_Position_v2024/: MainWindow.py  laser_control.py
_sources/: index.rst.txt
_static/: documentation_options.js
contents/: general.html
contents/applications/: applications_creation.html  modules_creation.html
contents/pyqt6/: index.html
contents/whatsincluded/: whatsincluded.html
docs/: lensepy_app_structure.pptx  requirements_docs.txt  thread_worker_pyqt6.txt
docs/_zygo/: Affichage_Zygo.pptx  Affichage_Zygo_algo.pptx  Poster_DEPhI2025_MRABTI_Zygo_v2.pptx  Poster_Zygo.pptx  Structure_of_the_app.pptx  aberrations.docx  installation_Zygo.docx
docs/source/: conf.py
exemples/new_app_lensepy/: my_app.py
src/lensepy-app/: __init__.py
src/lensepy_app/: __init__.py  utils.py
(+518 files in other folders)
